--- a/index.html
+++ b/index.html
@@ -2,34 +2,34 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Finance Game with AI Tutor</title>
-
+<title>Finance Game + AI Tutor + News</title>
 <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
-
 <style>
-body { margin:0; font-family: Arial, sans-serif; background:#f5f5f5; }
-header { background:#0f111a; color:white; padding:15px 30px; display:flex; justify-content:space-between; align-items:center; }
-header h1 { color:#1db954; }
+body { margin:0; font-family: "Segoe UI", sans-serif; background:#f5f5f5; color:#111; }
+header { display:flex; justify-content:space-between; align-items:center; padding:15px 30px; background:#0f111a; color:white; }
+header h1 { font-size:22px; color:#1db954; }
 #ticker { padding:6px; border-radius:5px; border:1px solid #ccc; }
-button { padding:6px 12px; background:#1db954; color:white; border:none; border-radius:5px; cursor:pointer; }
-.container { display:flex; padding:20px; }
+button { padding:6px 12px; background:#1db954; color:white; border:none; border-radius:5px; cursor:pointer; margin-left:5px; }
+.container { display:flex; padding:20px; gap:15px; }
 .left-panel { width:35%; }
-.right-panel { width:65%; }
+.middle-panel { width:40%; }
+.right-panel { width:25%; max-height:600px; overflow-y:auto; background:white; padding:10px; border-radius:5px; }
 #chart { height:400px; background:white; border-radius:5px; }
 table { width:100%; margin-top:15px; border-collapse: collapse; }
 th, td { padding:8px; text-align:center; border-bottom:1px solid #ddd; }
 th { background:#1db954; color:white; }
 #ai-box { margin-top:20px; background:white; padding:10px; border-radius:5px; }
-#ai-messages { height:150px; overflow-y:auto; border:1px solid #ccc; padding:5px; }
+#ai-messages { height:150px; overflow-y:auto; border:1px solid #ccc; padding:5px; font-size:14px; }
+.news-item { border-bottom:1px solid #ccc; padding:5px 0; }
+.news-item a { text-decoration:none; color:#1db954; }
 </style>
-
 </head>
 <body>
 
 <header>
   <h1>📊 Finance Game</h1>
   <div>
-    <input id="ticker" placeholder="Ticker e.g. AAPL" />
+    <input id="ticker" placeholder="Ticker e.g. AAPL" type="text"/>
     <button onclick="loadStock()">Load</button>
   </div>
 </header>
@@ -40,7 +40,6 @@ th { background:#1db954; color:white; }
     <div>📦 Shares: <span id="shares">0</span></div>
     <div>🏷 Stock: <span id="symbol">AAPL</span></div>
     <div>🏆 Value: $<span id="value">10000</span></div>
-    
     <button onclick="buy()">Buy +1</button>
     <button onclick="sell()">Sell -1</button>
 
@@ -67,8 +66,13 @@ th { background:#1db954; color:white; }
     </div>
   </div>
 
-  <div class="right-panel">
+  <div class="middle-panel">
     <div id="chart"></div>
+  </div>
+
+  <div class="right-panel">
+    <h3>📰 Latest News</h3>
+    <div id="news-feed"></div>
   </div>
 </div>
 
@@ -78,62 +82,70 @@ let shares = 0;
 let currentPrice = 0;
 let currentTicker = "AAPL";
 
+// <<< PUT YOUR FINNHUB API KEY HERE >>>
+const API_KEY = "d69kar1r01qm5rv47sl0d69kar1r01qm5rv47slg";
+
 let chart = LightweightCharts.createChart(document.getElementById('chart'), {
   width: document.getElementById('chart').clientWidth,
   height: 400,
   layout: { background: { color: "#ffffff" }, textColor: "#111" },
-  grid: { vertLines: { color:'#eee' }, horzLines: { color:'#eee' }
-  }
+  grid: { vertLines: { color:'#eee' }, horzLines: { color:'#eee' } }
 });
 let candleSeries = chart.addCandlestickSeries();
-
-// <<< REPLACE WITH YOUR ALPHA VANTAGE KEY >>>
-const API_KEY = "NOQBOL9U7IJ7FVXI";
-
-// CORS proxy (free, not 100% guaranteed)
-const PROXY = "https://api.allorigins.win/raw?url=";
 
 async function loadStock(){
   const ticker = (document.getElementById("ticker").value || "AAPL").toUpperCase();
   currentTicker = ticker;
   document.getElementById("symbol").innerText = ticker;
 
-  // Fetch daily data
-  const url = `https://www.alphavantage.co/query?function=TIME_SERIES_DAILY_ADJUSTED&symbol=${ticker}&apikey=${API_KEY}`;
-
   try {
-    const res = await fetch(PROXY + encodeURIComponent(url));
+    // Fetch stock candles
+    const res = await fetch(`https://finnhub.io/api/v1/stock/candle?symbol=${ticker}&resolution=D&count=30&token=${API_KEY}`);
     const data = await res.json();
+    if(data.s!=="ok") throw new Error("Invalid ticker");
 
-    const timeSeries = data["Time Series (Daily)"];
-    if(!timeSeries) throw new Error("No data");
-
-    const parsed = Object.keys(timeSeries).slice(0, 30).reverse().map(date => ({
-      time: date,
-      open: parseFloat(timeSeries[date]["1. open"]),
-      high: parseFloat(timeSeries[date]["2. high"]),
-      low: parseFloat(timeSeries[date]["3. low"]),
-      close: parseFloat(timeSeries[date]["4. close"])
+    const candles = data.t.map((t,i)=>({
+      time: new Date(t*1000).toISOString().split("T")[0],
+      open: data.o[i],
+      high: data.h[i],
+      low: data.l[i],
+      close: data.c[i]
     }));
-
-    candleSeries.setData(parsed);
-
-    currentPrice = parsed[parsed.length-1].close;
+    candleSeries.setData(candles);
+    currentPrice = data.c[data.c.length-1];
     updatePortfolio();
-  } catch(e) {
-    alert("Failed loading stock. Check ticker + API key or rate limits.");
+
+    // Fetch latest news
+    const newsRes = await fetch(`https://finnhub.io/api/v1/company-news?symbol=${ticker}&from=${getDateNDaysAgo(7)}&to=${getDateToday()}&token=${API_KEY}`);
+    const newsData = await newsRes.json();
+    displayNews(newsData);
+  } catch(e){
+    alert("Error loading stock/news. Check ticker and API key or rate limits.");
     console.error(e);
   }
 }
 
-function buy(){ if(cash >= currentPrice){ cash -= currentPrice; shares++; updatePortfolio(); } }
-function sell(){ if(shares > 0){ cash += currentPrice; shares--; updatePortfolio(); } }
+function getDateToday(){ return new Date().toISOString().split("T")[0]; }
+function getDateNDaysAgo(n){ const d = new Date(); d.setDate(d.getDate()-n); return d.toISOString().split("T")[0]; }
+
+function displayNews(news){
+  const feed = document.getElementById("news-feed");
+  feed.innerHTML = "";
+  news.slice(0,10).forEach(item=>{
+    const div = document.createElement("div");
+    div.className = "news-item";
+    div.innerHTML = `<a href="${item.url}" target="_blank">${item.headline}</a><div style="font-size:12px;color:#555;">${item.source}</div>`;
+    feed.appendChild(div);
+  });
+}
+
+function buy(){ if(cash>=currentPrice){ cash-=currentPrice; shares++; updatePortfolio(); } }
+function sell(){ if(shares>0){ cash+=currentPrice; shares--; updatePortfolio(); } }
 
 function updatePortfolio(){
   document.getElementById("cash").innerText = cash.toFixed(2);
   document.getElementById("shares").innerText = shares;
-  document.getElementById("value").innerText = (cash + shares*currentPrice).toFixed(2);
-
+  document.getElementById("value").innerText = (cash+shares*currentPrice).toFixed(2);
   document.getElementById("t-table").innerText = currentTicker;
   document.getElementById("s-table").innerText = shares;
   document.getElementById("p-table").innerText = currentPrice.toFixed(2);
@@ -143,18 +155,28 @@ function updatePortfolio(){
 function askTutor(){
   const input = document.getElementById('ai-input').value.toLowerCase();
   let response = "Sorry, I don't understand.";
+  if(input.includes("buy") && input.includes(currentTicker.toLowerCase())) response="You can buy if you have enough cash.";
+  else if(input.includes("sell") && input.includes(currentTicker.toLowerCase())) response="You can sell if you have shares.";
+  else if(input.includes("portfolio")) response=`Your portfolio is $${(cash+shares*currentPrice).toFixed(2)}.`;
+  else if(input.includes("price") && input.includes(currentTicker.toLowerCase())) response=`Current price of ${currentTicker} is $${currentPrice.toFixed(2)}.`;
 
-  if(input.includes("buy") && input.includes(currentTicker.toLowerCase())) response = "You can buy if you have enough cash.";
-  else if(input.includes("sell") && input.includes(currentTicker.toLowerCase())) response = "You can sell if you have shares.";
-  else if(input.includes("portfolio")) response = `Your portfolio is $${(cash + shares*currentPrice).toFixed(2)}.`;
-  else if(input.includes("price") && input.includes(currentTicker.toLowerCase())) response = `Current price of ${currentTicker} is $${currentPrice.toFixed(2)}.`;
-
-  const messages = document.getElementById('ai-messages');
+  const messages=document.getElementById('ai-messages');
   messages.innerHTML += "<div><strong>You:</strong> " + input + "</div>";
   messages.innerHTML += "<div><strong>Tutor:</strong> " + response + "</div>";
   messages.scrollTop = messages.scrollHeight;
+  document.getElementById('ai-input').value="";
 }
+
+// Optional: simulate small market fluctuation
+setInterval(()=>{
+  const change=(Math.random()*4-2)/100;
+  currentPrice+=currentPrice*change;
+  updatePortfolio();
+}, Math.random()*30000+30000);
+
+loadStock();
 </script>
 
 </body>
 </html>
+
